# mealpedant_backup_server

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  create_release.sh  docker-compose.yml  run.sh
.devcontainer/: devcontainer.json
.github/: release-body.md
.github/workflows/: create_release.yml
src/: app_env.rs  app_error.rs  main.rs
src/env/: mod.rs
src/word_art/: font.rs  mod.rs
src/ws/: connect.rs  connection_details.rs  mod.rs  ws_sender.rs
src/ws_messages/: incoming.rs  outgoing.rs
