[package]
name = "mealpedant_backup_server"
version = "0.1.6"
edition = "2021"
authors = ["Jack Wills <email@mrjackwills.com>"]
repository = "https://www.github.com/mrjackwills/mealpedant_backup_server"
description = "mealpedant backup server side client"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.4"
dotenvy = "0.15"
figlet-rs = "0.1"
futures-util = "0.3"
reqwest = { version = "0.11", default-features=false, features=["brotli", "gzip", "json", "rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-signal = "1.1"
thiserror = "1.0"
time = {version="0.3", features=["local-offset"]}
tokio = {version ="1.32", features=["full"]}
tokio-tungstenite={version= "0.20", features = ["rustls-tls-native-roots"]}
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip=true
debug = false
